--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -66,7 +66,7 @@ Da diese drei Parametersätze, welche von der Arbeitsgruppe um \textsc{S.~M.~Foi
 \subsection{Thermodynamische Eigenschaften}
 
 Wie für Gold zuvor (Abschnitt~\ref{goldthermo}) wurde auch für die Kupfer-Parametersätze eine Untersuchung der thermodynamischen Eigenschaften durchgeführt.
-Dabei zeigt sich für die die meisten Parametersätze mit Ausnahme von \pot{cu\_ag\_ymwu.eam.alloy} eine Überschätzung der Schmelztemperatur um ca. \SI{200}{\kelvin} (Abbildung~\ref{fig:copperthermo}).
+Dabei zeigt sich für die meisten Parametersätze mit Ausnahme von \pot{cu\_ag\_ymwu.eam.alloy} eine Überschätzung der Schmelztemperatur um ca. \SI{200}{\kelvin} (Abbildung~\ref{fig:copperthermo}).
 
 Daran ist die Eigenschaft von MD-Potentialen erkennbar, nach der Parametrisierungen für die Beschreibung struktureller Eigenschaften in der Regel keine thermodynamischen Eigenschaften darstellen.
 Unterhalb von \SI{1000}{\kelvin} stimmen die meisten Dichten mit Referenzwerten überein, die über den linearen Ausdehnungskoeffizienten von $\alpha = \SI{16.5e-6}{\per\kelvin}$\cite{haynes_crc_2011} berechnet wurden, weshalb die geringen Abscheidungstemperaturen von \SI{500}{\kelvin} die Schichteigenschaften nicht verfälschen sollten.
