--- a/intro.tex
+++ b/intro.tex
@@ -2,10 +2,10 @@
 \label{intro}
 
 %% {Aktueller Stand der Technologien und damit verbundene Herausforderungen}
-Gasphasenabscheidungen werden zur Herstellung konformer, dünner Schichten auf strukturierten und glatten Substraten genutzt, wobei besonders die Erzeugung ultradünner, hoch reiner, homogener Schichten eine Schlüsselstellung bei der Fertigung von Bauelementen in der Nanoelektronik einnimmt\cite{grannemann_thin_1993}.
-Sie sind beispielsweise für die Produktion dünner Dielektrika\cite{gordon_vapor_2001}, Interconnects\cite{waechtler_copper_2009} und Diffusionsbarrieren\cite{grannemann_thin_1993,raaijmakers_low_1994} interessant, für die besonders präzise Abscheidungsmethoden notwendig sind.
+Gasphasenabscheidungen werden zur Herstellung konformer, dünner Schichten auf strukturierten und glatten Substraten genutzt, wobei besonders die Erzeugung ultradünner, hoch reiner, homogener Schichten eine Schlüsselstellung bei der Fertigung von Bauelementen in der Nanoelektronik einnimmt\cite{granneman_thin_1993}.
+Sie sind beispielsweise für die Produktion dünner Dielektrika\cite{gordon_vapor_2001}, Interconnects\cite{waechtler_copper_2009} und Diffusionsbarrieren\cite{granneman_thin_1993,raaijmakers_low_1994} interessant, für die besonders präzise Abscheidungsmethoden notwendig sind.
 %% {weitere Anwendungen von Gasphasenabscheidung}
-Gasphasenabscheidungen werden auch für eine Vielzahl anderer Anwendungen verwendet, wie beispielsweise für die Produktion von passivierenden und protektiven Beschichtungen\cite{higashiwaki_algan/gan_2006,jankowski_subnanometer_1989}.
+Gasphasenabscheidungen werden auch für eine Vielzahl anderer Anwendungen verwendet, wie beispielsweise für die Produktion von passivierenden und protektiven Beschichtungen\cite{yun_passivation_2004,poodt_high-speed_2010,higashiwaki_algan/gan_2006}.
 Weiterhin erlauben sie die Herstellung mehrlagiger Materialien mit besonderen mechanischen (erhöhte Festigkeit)\cite{cammarata_nanoindentation_1990}, magnetischen (Riesenmagnetowiderstand\cite{peter_influence_2007,seyama_giant_1999,bird_giant_1995}, magnetischer Tunnelwiderstand\cite{sun_magnetic_2006}) und optischen (Röntgenspiegel\cite{jankowski_subnanometer_1989}) Eigenschaften.
 Doch auch größere Oberflächen werden per Gasphasenabscheidung mit Dünnschichten versehen, etwa zur Erhöhung der Witterungs- und Wärmebeständigkeit von Oberflächen\cite{mccurdy_successful_1999}.
 
@@ -14,7 +14,7 @@ Bei Gasphasenabscheidungen adsorbieren einzelne Atome oder Moleküle aus der Gas
 Mit der Physikalischen Gasphasenabscheidung (PVD, Physical Vapor Deposition), der Chemischen Gasphasenabscheidung (CVD, Chemical Vapor Deposition) und der Atomlagenabscheidung (ALD, Atomic Layer Deposition) stehen Methoden zur Verfügung, welche das Wachstum verschiedener Materialien mit unterschiedlichen Graden der Prozesskontrolle erlauben.
 
 %% {Mein Gebiet}
-Atomistische Simulationen können helfen, unter verschiedenen Bedingungen die strukturellen Eigenschaften der abgeschiedenen Schicht zu beschreiben, anhand derer auch Rückschlüsse auf elektronische\cite{aspnes_optical_1981,steudel_influence_2004} oder mechanische Eigenschaften\cite{chasiotis_mechanical_2003,cammarata_nanoendentation_1990} gezogen werden können.
+Atomistische Simulationen können helfen, unter verschiedenen Bedingungen die strukturellen Eigenschaften der abgeschiedenen Schicht zu beschreiben, anhand derer auch Rückschlüsse auf elektronische\cite{aspnes_optical_1982,steudel_influence_2004} oder mechanische Eigenschaften\cite{chasiotis_mechanical_2003,cammarata_nanoindentation_1990} gezogen werden können.
 Dafür ist eine Modellierung chemischer Reaktionen und amorpher Strukturen ebenso notwendig wie die Beschreibung von Simulationsräumen auf der Größenordnung kompletter Nano-Bauelemente, um ebenfalls Aussagen über das Wachstum auf strukturierten und gemischten Substraten treffen zu können.
 Zur Simulation von Abscheidungen auf kompletten Nano-Bauelementen sind große Simulationsräume bis \SI{1x1}{\micro\meter} mit bis zu \num{1e9} Atomen notwendig, die mit rein atomistischen Simulationen bisher aufgrund des hohen Rechenaufwandes nicht möglich sind\cite{plimpton_computational_1995}.
 % oder keine strukturellen Aussagen ermöglichen.
