--- a/summary.tex
+++ b/summary.tex
@@ -66,7 +66,7 @@ Wie in der Arbeit demonstriert wurde, lässt sich Parsivald bereits jetzt zur ef
 Es lassen sich auch gemischte Systeme wie beispielsweise Legierungen und verschiedene Multilagen-Systeme in Simulationen physikalischer Gasphasenabscheidungen untersuchen.
 
 Die reaktive Simulation von chemischen Gasphasenabscheidungen ist mit dem Parsivald-Modell theoretisch möglich, konnte aber noch nicht demonstriert werden, weshalb die Untersuchung passender ReaxFF-Parametersätze notwendig ist.
-Damit wäre auch die Simulation von mehrstufigen Abscheidungen, wie sie etwa in der Mikroelektronik genutzt werden\cite{grannemann_thin_1993}, denkbar, bei denen viele verschiedene Materialien auf atomarer Ebene per MD beschrieben werden müssten.
+Damit wäre auch die Simulation von mehrstufigen Abscheidungen, wie sie etwa in der Mikroelektronik genutzt werden\cite{granneman_thin_1993}, denkbar, bei denen viele verschiedene Materialien auf atomarer Ebene per MD beschrieben werden müssten.
 
 Unter Nutzung verschiedener Schichtarten ist auch die Simulation des anfänglichen Schichtwachstums auf verschiedenartigen Substraten möglich.
 Zwar wurde mit Kupfer-Nickel-Multi\-lagen-PVD bereits eine solche Untersuchung durchgeführt, doch zeigen diese Materialien gute Hafteigenschaften.
