--- a/depositions.tex
+++ b/depositions.tex
@@ -31,7 +31,7 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
   \begin{threeparttable}
     \caption[Auswahl möglicher Produkte von PVD, CVD und ALD]{
       Auswahl möglicher Produkte der verschiedenen Abscheidungsmethoden.
-      Details zu den Produkten und Prozessgasen finden sich in den Referenzen für PVD\cite{mattox_handbook_2010,helmersson_ionized_2006}, CVD\cite{pierson_handbook_1999} und ALD\cite{puurunen_surface_2005,elliott_atomic-scale_2012,ritala_chapter_2008}.
+      Details zu den Produkten und Prozessgasen finden sich in den Referenzen für PVD\cite{mattox_handbook_2010,helmersson_ionized_2006}, CVD\cite{pierson_handbook_1999} und ALD\cite{puurunen_surface_2005,elliott_atomic-scale_2012,ritala_chemical_2009}.
     }
     \label{tab:deposition-materials}
     \begin{tabularx}{\textwidth}{XcX}
@@ -56,7 +56,7 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
     & \\
     \end{tabularx}
     \begin{tablenotes}
-    \item[a] Effiziente ALD-Prozesse und Precursorpaare existieren nur für wenige Metalle\cite{ritala_chapter_2008}
+    \item[a] Effiziente ALD-Prozesse und Precursorpaare existieren nur für wenige Metalle\cite{ritala_chemical_2009}
     \end{tablenotes}
   \end{threeparttable}
 \end{table}
